--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -41,3 +41,5 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
 
           DEFAULT_BRANCH: master
+
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
